# simple_obfuscator

./: CMakeLists.txt  Makefile  README.md
docs/: ARTICLE.md  ARTICLE_DEOBFUSCATE.md
ghidra_scripts/: generate_fixup.py  simple_deobfuscate.py  simple_deobfuscate_agno.py
include/: CallControlFlowModule.hpp  ObfuscationModule.hpp  Obfuscator.hpp
src/: CMakeLists.txt  CallControlFlowModule.cpp  Main.cpp  ObfuscationModule.cpp  Obfuscator.cpp
tests/article_test/: Makefile
tests/article_test/src/: main.c
tests/keygenme/: Makefile
tests/keygenme/src/: main.c
